final edits, fixed photo size problem on safari

--- a/styles/sass/_aboutPage.scss
+++ b/styles/sass/_aboutPage.scss
@@ -4,6 +4,7 @@
     img {
         width: 80%;
         border-radius: 50%;
+        align-self: center;
     }
 }
 
