--- a/styles/style.css
+++ b/styles/style.css
@@ -658,6 +658,9 @@ ul.headerNav .headerMenuItems {
 .imageContainer img {
   width: 80%;
   border-radius: 50%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .aboutMe {
